Fix scaling behaviour if the axes are swapped. #13535

First swapping, then inverting and scaling. I think it's the most
intuitive solution to the problem, because it makes minX, maxX & co. act on
the _actual_ X and Y axes, from the user/developer point of view.

Signed-off-by: Peter Hutterer <peter@cs.unisa.edu.au>

X.Org Bug 13535 <http://bugs.freedesktop.org/show_bug.cgi?id=13535>